--- a/bootloader/src/main/resources/application.properties
+++ b/bootloader/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
 spring.flyway.baseline-on-migrate=true
+
+logging.level.org.springframework.core.io.support=DEBUG
+logging.level.org.springframework.context.annotation=DEBUG
+
+logging.level.org.springframework.context.annotation=DEBUG
+logging.level.web=TRACE
