--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 		<maven.compiler.target>10</maven.compiler.target>
 		<maven.compiler.source>10</maven.compiler.source>
 		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-		<lombok.version>1.18.22</lombok.version>
+		<lombok.version>1.18.30</lombok.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
-		<spring-boot-starter-parent.version>2.6.3</spring-boot-starter-parent.version>
+		<spring-boot-starter-parent.version>3.2.0</spring-boot-starter-parent.version>
 		<spring-boot-maven-plugin.version>2.4.5</spring-boot-maven-plugin.version>
 	</properties>
 
@@ -54,7 +54,19 @@
 				<artifactId>lombok-mapstruct-binding</artifactId>
 				<version>${lombok-mapstruct-binding.version}</version>
 			</dependency>
+            <dependency>
+                <groupId>javax.persistence</groupId>
+                <artifactId>javax.persistence-api</artifactId>
+                <version>2.2</version>
+            </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 		</dependencies>
+        
 	</dependencyManagement>
 
 	<modules>
