working with latest springboot, swagger via springboot-doc

--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -16,11 +16,11 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
 		</dependency>
 		<dependency>
             <groupId>org.slf4j</groupId>
