--- a/application/pom.xml
+++ b/application/pom.xml
@@ -28,6 +28,7 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
 		</dependency>
 		<dependency>
             <groupId>org.slf4j</groupId>
@@ -39,14 +40,15 @@
             <artifactId>javax.transaction-api</artifactId>
             <version>1.3</version>
         </dependency>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-        </dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+         </dependency>
 	</dependencies>
 </project>
