--- a/infrastructure/adapter-h2/pom.xml
+++ b/infrastructure/adapter-h2/pom.xml
@@ -37,6 +37,7 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
