--- a/infrastructure/adapter-rest/pom.xml
+++ b/infrastructure/adapter-rest/pom.xml
@@ -42,6 +42,7 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
