came a long way but the jar in the end is not executable, although mvn run... does work

--- a/bootloader/src/main/resources/application.properties
+++ b/bootloader/src/main/resources/application.properties
@@ -27,3 +27,6 @@ logging.level.org.springframework.context.annotation=DEBUG
 
 logging.level.org.springframework.context.annotation=DEBUG
 logging.level.web=TRACE
+
+# so we can have a bean method and return the adapter we want to use
+spring.main.allow-bean-definition-overriding=true
